--- a/support/index.html
+++ b/support/index.html
@@ -14,7 +14,7 @@
   <img src="img/logo.png" class="mx-auto d-block" width="250" height="250" alt="logo">
   <h1 class="display-4 text-center">Jet<b>Notes</b></h1>
   <p></p>
-  <p class="text-center">For any questions or queries, please contact us via</p>
+  <p class="text-center">For any questions or concerns, please contact us via</p>
   <p class="text-center"><a href="mailto:simpleapp4u@gmail.com">simpleapp4u@gmail.com</a></p>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
